compiler/tests/success/x86-64/bug_870.jazz
export
fn rand(reg ptr u8[32] io) -> reg ptr u8[32] {
  reg u64 len = 32;
  io = #randombytes(io, len);
  return io;
}
