compiler/tests/fail/stack_allocation/x86-64/out_of_bounds_read.jazz
export fn main (reg ptr u64[1] r) -> reg u64 {
  reg u64 res = r[2];
  return res;
}
